[package]
name = "gusta"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[dependencies]
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.75"
rand = "0.8.5"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde-xml-rs = "0.6.0"
sha256 = "1.4.0"
toml = "0.7.8"
colored = "2.0.4"
